# Alcohol-Label-Verification-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  startup.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/controllers/: __init__.py  batch_controller.py  config_controller.py  health_controller.py  sheet_controller.py  verification_controller.py
backend/app/core/: dependencies.py  settings.py
backend/app/models/: __init__.py  application.py  batch.py  config.py  errors.py  uploads.py  verification.py
backend/app/providers/: __init__.py  base.py  chat_completion_parser.py  factory.py  local_provider.py  multi_pass_provider.py  openrouter_provider.py
backend/app/services/: __init__.py  batch_service.py  result_guard_service.py  sheet_service.py  upload_service.py  verification_prompt_service.py  verification_service.py
backend/tests/: helpers.py  test_api.py  test_batch_routes.py  test_chat_completion_parser.py  test_config_and_upload.py  test_prompt_service.py  test_providers.py  test_result_guard_service.py  test_verify_routes.py
docs/: assumptions.md  codebase-audit-remediation-plan.md  codebase-audit.md  design.md  large-demo-dataset.md  proposal.md  startup.md
frontend/: index.html  package-lock.json  package.json
frontend/public/sample_labels/: manifest.json
frontend/scripts/: generate-sample-labels.mjs
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: DemoInfoModal.tsx  (+18 more)
scripts/: live_warning_regression.py
(+21 files in other folders)
