[project]
name = "alcohol-label-verification-backend"
version = "0.1.0"
description = "FastAPI backend for the Alcohol Label Verification prototype."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
